--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,6 @@
+# Database
 DATABASE_URL="file:./dev.db"
+
+#Github
+GITHUB_CLIENT_ID="e09b98171a472081c9ab"
+GITHUB_CLIENT_SECRET="a2ddeae797b83446055c295c37b7738846bb6cf9"
